--- a/EmberTripsPage/appsettings.json
+++ b/EmberTripsPage/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Uri": "https://api.ember.to"
 }
