--- a/EmberTripsPage/EmberTripsPage.csproj
+++ b/EmberTripsPage/EmberTripsPage.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a7f0b538-aa69-483d-8953-eec334e994cd</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BlazorGoogleMaps" Version="4.11.1" />
+    <PackageReference Include="BootstrapBlazor" Version="9.5.12" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
